--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
   assets:
     - assets/
     - assets/illustrations/
+    - assets/icons/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
