--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  go_router: ^7.0.2
-  image_picker: ^0.8.7+5
+  go_router: ^10.0.0
+  image_picker: ^1.0.1
   flutter_riverpod: ^2.3.6
-  http: ^0.13.6
+  http: ^1.0.0
   http_parser: ^4.0.2
-  fpdart: ^0.6.0
+  fpdart: ^1.0.0
   iconsax: ^0.0.8
   flutter_svg: ^2.0.6
   flutter_secure_storage: ^8.0.0
@@ -49,7 +49,10 @@ dependencies:
   mime: ^1.0.4
   cached_network_image: ^3.2.3
   onesignal_flutter: ^3.5.1
-  internet_connection_checker_plus: ^1.0.1
+  flutter_map: ^5.0.0
+  latlong2: ^0.9.0
+  geolocator: ^9.0.2
+  internet_connection_checker_plus: ^2.0.0
 
 
 dev_dependencies:
