--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   latlong2: ^0.9.0
   geolocator: ^9.0.2
   internet_connection_checker_plus: ^2.0.0
-
+  flutter_polyline_points_plus: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.4.5
