--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,11 +48,14 @@ dependencies:
   objectbox_flutter_libs: ^2.1.0
   mime: ^1.0.4
   cached_network_image: ^3.2.3
+  internet_connection_checker_plus: ^2.0.0
   onesignal_flutter: ^3.5.1
+
+#map dependencies
   flutter_map: ^5.0.0
   latlong2: ^0.9.0
   geolocator: ^9.0.2
-  internet_connection_checker_plus: ^2.0.0
+  flutter_map_location_marker: ^7.0.2
   flutter_polyline_points_plus: ^3.0.0
 
 dev_dependencies:
