--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.18.0
+
   go_router: ^10.0.0
   image_picker: ^1.0.1
   flutter_riverpod: ^2.3.6
@@ -50,13 +52,16 @@ dependencies:
   cached_network_image: ^3.2.3
   internet_connection_checker_plus: ^2.0.0
   onesignal_flutter: ^3.5.1
-
 #map dependencies
   flutter_map: ^5.0.0
   latlong2: ^0.9.0
   geolocator: ^9.0.2
   flutter_map_location_marker: ^7.0.2
   flutter_polyline_points_plus: ^3.0.0
+
+
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   build_runner: ^2.4.5
