--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   http: ^1.0.0
   http_parser: ^4.0.2
-  fpdart: ^1.0.0
+  fpdart: ^1.1.0
   iconsax: ^0.0.8
   flutter_svg: ^2.0.6
   flutter_secure_storage: ^8.0.0
@@ -51,8 +51,8 @@ dependencies:
   mime: ^1.0.4
   cached_network_image: ^3.2.3
   internet_connection_checker_plus: ^2.0.0
-  onesignal_flutter: ^3.5.1
-  web_socket_channel: ^2.4.0
+  onesignal_flutter: ^5.0.0
+  url_launcher: ^6.1.12
 
 #map dependencies
   flutter_map: ^5.0.0
@@ -79,7 +79,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/logo_light.png"
+  image_path: "assets/logo_dark.png"
   min_sdk_android: 21
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
