--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   cached_network_image: ^3.2.3
   internet_connection_checker_plus: ^2.0.0
   onesignal_flutter: ^5.0.0
+  flutter_html: ^3.0.0-beta.2
   url_launcher: ^6.1.12
 
 #map dependencies
