--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: '>=3.0.1 <4.0.0'
@@ -38,15 +38,15 @@ dependencies:
   intl: ^0.18.0
 
   go_router: ^10.0.0
-  flutter_riverpod: ^2.3.6
+  flutter_riverpod: ^2.3.10
   http: ^1.0.0
   http_parser: ^4.0.2
   fpdart: ^1.1.0
   iconsax: ^0.0.8
-  flutter_svg: ^2.0.6
-  flutter_secure_storage: ^8.0.0
-  objectbox: ^2.1.0
-  objectbox_flutter_libs: ^2.1.0
+  flutter_svg: ^2.0.7
+  flutter_secure_storage: ^9.0.0
+  objectbox: ^2.2.1
+  objectbox_flutter_libs: ^2.2.1
   mime: ^1.0.4
   cached_network_image: ^3.2.3
   internet_connection_checker_plus: ^2.0.0
@@ -67,7 +67,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.5
-  objectbox_generator: ^2.1.1-dev.0
+  objectbox_generator: ^2.2.1
   flutter_launcher_icons: ^0.13.1
 
 
