--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,12 +5,12 @@ workflows:
     max_build_duration: 120
     environment:
       android_signing:
-        - keystore_reference
+        - miDriver-user
       groups:
-        - google_play # <-- (Includes GCLOUD_SERVICE_ACCOUNT_CREDENTIALS)
+        - google_play
       vars:
-        PACKAGE_NAME: "io.codemagic.flutteryaml" # <-- Put your package name here
-        GOOGLE_PLAY_TRACK: "alpha"
+        PACKAGE_NAME: "com.elroir.miDriverUser"
+        GOOGLE_PLAY_TRACK: "production"
       flutter: stable
     scripts:
       - name: Set up local.properties
@@ -37,29 +37,21 @@ workflows:
       - build/**/outputs/**/mapping.txt
       - flutter_drive.log
     publishing:
-      email:
-        recipients:
-          - user_1@example.com
-          - user_2@example.com
-        notify:
-          success: true
-          failure: false
       google_play:
         credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
         track: $GOOGLE_PLAY_TRACK
-        submit_as_draft: true
   ios-workflow:
     name: iOS Workflow
     instance_type: mac_mini_m1
     max_build_duration: 120
     integrations:
-      app_store_connect: codemagic
+      app_store_connect: miDriver-user
     environment:
       ios_signing:
         distribution_type: app_store
-        bundle_identifier: io.codemagic.flutteryaml
+        bundle_identifier: com.elroir.miDriverUser
       vars:
-        APP_ID: com.elroir.miDriverUser # <-- Put your APP ID here
+        APP_ID: 6464003419
       flutter: stable
       xcode: latest
       cocoapods: default
@@ -92,20 +84,6 @@ workflows:
       - flutter_drive.log
     publishing:
       # See the following link for details about email publishing - https://docs.codemagic.io/publishing-yaml/distribution/#email
-      email:
-        recipients:
-          - user_1@example.com
-          - user_2@example.com
-        notify:
-          success: true # To receive a notification when a build succeeds
-          failure: false # To not receive a notification when a build fails
-      slack:
-        # See the following link about how to connect your Slack account - https://docs.codemagic.io/publishing-yaml/distribution/#slack
-        channel: "#builds"
-        notify_on_build_start: true # To receive a notification when a build starts
-        notify:
-          success: true # To receive a notification when a build succeeds
-          failure: false # To not receive a notification when a build fails
       app_store_connect:
         auth: integration
 
@@ -113,8 +91,8 @@ workflows:
         # Note: This action is performed during post-processing.
         submit_to_testflight: true
         beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
-          - group name 1
-          - group name 2
+          - socios
+          - testers
 
         # Configuration related to App Store (optional)
         # Note: This action is performed during post-processing.
