--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -46,7 +46,7 @@ workflows:
     instance_type: mac_mini_m1
     max_build_duration: 120
     integrations:
-      app_store_connect: miDriver-user
+      app_store_connect: miDriver-user-distribution
     environment:
       ios_signing:
         distribution_type: app_store
@@ -57,9 +57,9 @@ workflows:
       xcode: latest
       cocoapods: default
     scripts:
-#      - name: Set up code signing settings on Xcode project
-#        script: |
-#          xcode-project use-profiles
+      - name: Set up code signing settings on Xcode project
+        script: |
+          xcode-project use-profiles
       - name: Get Flutter packages
         script: |
           flutter packages pub get
