--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -46,7 +46,7 @@ workflows:
     instance_type: mac_mini_m1
     max_build_duration: 120
     integrations:
-      app_store_connect: miDriver-user-distribution
+      app_store_connect: miDriver-user
     environment:
       ios_signing:
         distribution_type: app_store
