--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-lib/core/http/http_options.dart
+#lib/core/http/http_options.dart
 # Symbolication related
 app.*.symbols
 
