--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,3 @@
-
 pluginManagement {
     def flutterSdkPath = {
         def properties = new Properties()
@@ -6,9 +5,10 @@ pluginManagement {
         def flutterSdkPath = properties.getProperty("flutter.sdk")
         assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
         return flutterSdkPath
-    }()
+    }
+    settings.ext.flutterSdkPath = flutterSdkPath()
 
-    includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
+    includeBuild("${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle")
 
     repositories {
         google()
