--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,10 +55,10 @@ dependencies:
   url_launcher: ^6.1.12
 
 #map dependencies
-  flutter_map: ^6.1.0
-  latlong2: ^0.9.0
-  geolocator: ^11.0.0
-  flutter_map_location_marker: ^8.0.8
+  flutter_map: ^7.0.1
+  latlong2: ^0.9.1
+  geolocator: ^12.0.0
+  flutter_map_location_marker: ^9.0.0
   flutter_polyline_points_plus: ^3.0.0
 
 
@@ -79,7 +79,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/logo_dark.png"
+  image_path: "assets/logo.png"
   min_sdk_android: 21
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
